Placed form validation for people input

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,4 +4,5 @@ $dg-cyan: hsl(186, 14%, 43%);
 $dg-cyan2: hsl(184, 14%, 56%);
 $lg-cyan: hsl(185, 41%, 84%);
 $lg-cyan2: hsl(189, 41%, 97%);
+$red: hsl(13, 60%, 60%);
 $white: hsl(0, 0%, 100%);
