--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -72,8 +72,8 @@ body {
         width: 100%;
         padding: 0.6rem;
         font-size: 1rem;
-        font-family: SpaceMono;
-        color: colors.$dg-cyan;
+        font-family: SpaceMonoB;
+        color: colors.$vdark-cyan;
         text-align: end;
         background-color: colors.$lg-cyan2;
         background-repeat: no-repeat;
@@ -81,6 +81,16 @@ body {
         background-position: 0.6rem;
         border-radius: 0.2rem;
         border: none;
+
+        &:focus {
+            border: 0.1rem solid colors.$strong-cyan;
+            outline: none;
+        }
+
+        &::placeholder {
+            font-family: SpaceMono;
+            color: colors.$dg-cyan2;
+        }
     }
 
     &__form-bill {
@@ -91,11 +101,7 @@ body {
         background-image: url("../assets/images/icon-person.svg");
 
         &--error {
-            border: 0.1rem solid colors.$red;
-        }
-
-        &:focus {
-            outline: none;
+            border: 0.1rem solid colors.$red !important;
         }
     }
 
@@ -120,8 +126,6 @@ body {
         height: 6rem;
         padding: 0.8rem 0;
         margin-top: -0.3rem;
-
-
     }
 
     &__tip-btn {
@@ -135,9 +139,20 @@ body {
 
         &--custom {
             background-color: colors.$lg-cyan2;
-            color: colors.$dg-cyan;
+            color: colors.$vdark-cyan;
             width: 100%;
-            text-align: center;
+            text-align: end;
+            padding-right: 0.6rem;
+            cursor: auto;
+
+            &:focus {
+                border: 0.1rem solid colors.$strong-cyan;
+                outline: none;
+            }
+
+            &::placeholder {
+                color: colors.$dg-cyan;
+            }
         }
 
         &--clicked {
@@ -196,6 +211,10 @@ body {
         color: colors.$vdark-cyan;
         border: none;
         border-radius: 0.2rem;
+
+        &:active {
+            background-color: colors.$lg-cyan;
+        }
 
         &--enabled {
             opacity: 1;
