--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -236,3 +236,14 @@ body {
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+@media screen and (min-width: 1440px) {
+    :root {
+        font-size: 26px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    :root {
+        font-size: 20px;
+    }
+}
