--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,21 +14,21 @@
 }
 
 body {
-    font-family: SpaceMono
+    font-family: SpaceMono;
 }
 
 .app {
     min-height: 100vh;
     background-color: colors.$lg-cyan;
     display: grid;
-    grid-template-rows: 2fr 5fr 1fr;
+    grid-template-rows: 26% 65% auto;
 }
 
 .header {
     align-self: center;
     text-transform: uppercase;
     text-align: center;
-    color: colors.$vdark-cyan;
+    color: colors.$dg-cyan;
     font-size: 0.9rem;
     letter-spacing: 0.3rem;
 
@@ -62,6 +62,7 @@ body {
         color: colors.$dg-cyan;
         font-family: SpaceMonob;
         font-size: 0.7rem;
+        letter-spacing: 0.05rem;
     }
 
     &__form-bill,
@@ -245,5 +246,377 @@ body {
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     :root {
         font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 512px) and (max-width: 767px) {
+    :root {
+        font-size: 19px;
+    }
+
+    .app {
+        overflow: auto;
+        grid-template-rows: 12fr 65fr 0;
+    }
+    
+    .header {
+        font-size: 1.7rem;
+        letter-spacing: 0.5rem;
+    }
+
+    .card {
+        width: 26.5rem;
+        height: 100%;
+        padding: 2rem;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1.6fr 1fr;
+        grid-row-gap: 2.5rem;
+        border-radius: 1.5rem 1.5rem 0rem 0rem;
+
+        &__form {
+            grid-template-rows: 1fr 4fr 1fr;
+        }
+
+        & label {
+            font-size: 1rem;
+        }
+
+        &__form-bill,
+        &__form-people {
+            height: 3rem;
+            border-radius: 0.5rem;
+            background-size: 0.8rem;
+            background-position: 1rem;
+            font-size: 1.5rem;
+            padding: 1rem;
+            margin-top: 0.3rem;
+
+            &:focus {
+                border-width: 0.15rem;
+            }
+
+            &::placeholder {
+                font-size: 1.5rem;
+            }
+        }
+
+        &__form-people--error {
+            border-width: 0.15rem !important;
+        }
+
+        &__form-people-error {
+            font-size: 0.9rem;
+            top: 0.1rem;
+        }
+
+        &__form-btns {
+            height: 80%;
+            margin-top: 1.1rem;
+            
+        }
+
+        &__tip-btns {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 1.1rem;
+            margin-top: 0.1rem;
+        }
+
+        &__tip-btn {
+            font-size: 1.5rem;
+            height: 3.2rem;
+            border-radius: 0.4rem;
+
+            &--custom {
+                font-size: 1.5rem;
+                padding-right: 1rem;
+
+                &:focus {
+                    border-width: 0.15rem;
+                }
+            }
+        }
+
+        &__output {
+            display: grid;
+            grid-template-rows: 1fr 1fr 1.3fr;
+            padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+        }
+
+        &__total {
+            top: 0;
+        }
+
+        &__amount-txt,
+        &__total-txt {
+            font-size: 1rem;
+            letter-spacing: 0.05rem;
+
+            & span {
+                font-size: 0.9rem;
+                letter-spacing: 0rem;
+            }
+        }
+
+        &__amount-money,
+        &__total-money {
+            font-size: 2.3rem;
+        }
+
+        &__reset {
+            top: 0;
+            height: 3.2rem;
+            font-size: 1.35rem;
+            border-radius: 0.4rem;
+        }
+
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 511px) {
+    :root {
+        font-size: 18px;
+    }
+
+    .app {
+        overflow: auto;
+        grid-template-rows: 12fr 65fr 0;
+    }
+    
+    .header {
+        font-size: 1.7rem;
+        letter-spacing: 0.5rem;
+    }
+
+    .card {
+        width: 26.5rem;
+        height: 100%;
+        padding: 2rem;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1.6fr 1fr;
+        grid-row-gap: 2.5rem;
+        border-radius: 1.5rem 1.5rem 0rem 0rem;
+
+        &__form {
+            grid-template-rows: 1fr 4fr 1fr;
+        }
+
+        & label {
+            font-size: 1rem;
+        }
+
+        &__form-bill,
+        &__form-people {
+            height: 3rem;
+            border-radius: 0.5rem;
+            background-size: 0.8rem;
+            background-position: 1rem;
+            font-size: 1.5rem;
+            padding: 1rem;
+            margin-top: 0.3rem;
+
+            &:focus {
+                border-width: 0.15rem;
+            }
+
+            &::placeholder {
+                font-size: 1.5rem;
+            }
+        }
+
+        &__form-people--error {
+            border-width: 0.15rem !important;
+        }
+
+        &__form-people-error {
+            font-size: 0.9rem;
+            top: 0.1rem;
+        }
+
+        &__form-btns {
+            height: 80%;
+            margin-top: 1.1rem;
+            
+        }
+
+        &__tip-btns {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 1.1rem;
+            margin-top: 0.1rem;
+        }
+
+        &__tip-btn {
+            font-size: 1.5rem;
+            height: 3.2rem;
+            border-radius: 0.4rem;
+
+            &--custom {
+                font-size: 1.5rem;
+                padding-right: 1rem;
+
+                &:focus {
+                    border-width: 0.15rem;
+                }
+            }
+        }
+
+        &__output {
+            display: grid;
+            grid-template-rows: 1fr 1fr 1.3fr;
+            padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+        }
+
+        &__total {
+            top: 0;
+        }
+
+        &__amount-txt,
+        &__total-txt {
+            font-size: 1rem;
+            letter-spacing: 0.05rem;
+
+            & span {
+                font-size: 0.9rem;
+                letter-spacing: 0rem;
+            }
+        }
+
+        &__amount-money,
+        &__total-money {
+            font-size: 2.3rem;
+        }
+
+        &__reset {
+            top: 0;
+            height: 3.2rem;
+            font-size: 1.35rem;
+            border-radius: 0.4rem;
+        }
+
+    }
+}
+
+@media screen and (min-width: 368px) and (max-width: 479px) {
+    :root {
+        font-size: 13.5px;
+    }
+
+    .app {
+        overflow: auto;
+        grid-template-rows: 12fr 65fr 0;
+    }
+    
+    .header {
+        font-size: 1.7rem;
+        letter-spacing: 0.5rem;
+    }
+
+    .card {
+        width: 26.5rem;
+        height: 100%;
+        padding: 2rem;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1.6fr 1fr;
+        grid-row-gap: 2.5rem;
+        border-radius: 1.5rem 1.5rem 0rem 0rem;
+
+        &__form {
+            grid-template-rows: 1fr 4fr 1fr;
+        }
+
+        & label {
+            font-size: 1rem;
+        }
+
+        &__form-bill,
+        &__form-people {
+            height: 3rem;
+            border-radius: 0.5rem;
+            background-size: 0.8rem;
+            background-position: 1rem;
+            font-size: 1.5rem;
+            padding: 1rem;
+            margin-top: 0.3rem;
+
+            &:focus {
+                border-width: 0.15rem;
+            }
+
+            &::placeholder {
+                font-size: 1.5rem;
+            }
+        }
+
+        &__form-people--error {
+            border-width: 0.15rem !important;
+        }
+
+        &__form-people-error {
+            font-size: 0.9rem;
+            top: 0.1rem;
+        }
+
+        &__form-btns {
+            height: 80%;
+            margin-top: 1.1rem;
+            
+        }
+
+        &__tip-btns {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 1.1rem;
+            margin-top: 0.1rem;
+        }
+
+        &__tip-btn {
+            font-size: 1.5rem;
+            height: 3.2rem;
+            border-radius: 0.4rem;
+
+            &--custom {
+                font-size: 1.5rem;
+                padding-right: 1rem;
+
+                &:focus {
+                    border-width: 0.15rem;
+                }
+            }
+        }
+
+        &__output {
+            display: grid;
+            grid-template-rows: 1fr 1fr 1.3fr;
+            padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+        }
+
+        &__total {
+            top: 0;
+        }
+
+        &__amount-txt,
+        &__total-txt {
+            font-size: 1rem;
+            letter-spacing: 0.05rem;
+
+            & span {
+                font-size: 0.9rem;
+                letter-spacing: 0rem;
+            }
+        }
+
+        &__amount-money,
+        &__total-money {
+            font-size: 2.3rem;
+        }
+
+        &__reset {
+            top: 0;
+            height: 3.2rem;
+            font-size: 1.35rem;
+            border-radius: 0.4rem;
+        }
+
     }
 }
