Fixed custom tip placeholder font size

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -349,6 +349,10 @@ body {
                 &:focus {
                     border-width: 0.15rem;
                 }
+
+                &::placeholder {
+                    font-size: 1.6rem;
+                }
             }
         }
 
