Changed header color

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,7 +42,7 @@ body {
   align-self: center;
   text-transform: uppercase;
   text-align: center;
-  color: #5e7a7d;
+  color: #00494d;
   font-size: 0.9rem;
   letter-spacing: 0.3rem;
 }
