--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,7 +29,7 @@ body {
     align-self: center;
     text-transform: uppercase;
     text-align: center;
-    color: colors.$dg-cyan;
+    color: colors.$vdark-cyan;
     font-size: 0.9rem;
     letter-spacing: 0.3rem;
 
